less/editor.less
/* ... */
// adjustments for specific buttons
button.vp.svg {
  svg.cmd_edit_graph {
	top: 55%;
  }
}


/* nodes */

div.graph-node.p_renamed .p_header > div span.p_title {color: #ffc;}

@media screen and (-webkit-min-device-pixel-ratio:0) {
  // force buttons to their specified width in webkit
  div.graph-node .p_header>div span.p_title {width: 100%;}
}
div.graph-node {
    -webkit-font-smoothing: subpixel-antialiased;
  	box-shadow: 0 0 2px rgba(0,0,0,0.2);
  	display: table;
    border: 0;
	border-spacing: 0;
	border-radius: @vp-node-border-radius;
	background: @vp-node-bg;
	color: @vp-node-color;
  	overflow:hidden;	// required by io or other inline nodes to round their corners
  	// note node-ui.js may set width:auto on this
  	&.p_renaming {
	  input.p_rename {
		position : absolute;
		top : 5px;
		outline:none;
		background: none;
		border: 0;
		color:white ! important;
		font-weight: 500;
	  }
	  .p_header .p_wrap {
		button.edit, .ic, .ic .p_slot span svg {visibility: hidden;}
		span.p_title {color: rgba(1,1,1,0); width:auto;}
	  }
	}
  	.p_header {
	  position:relative;
	  border-top-left-radius: @vp-node-border-radius;
	  border-top-right-radius: @vp-node-border-radius;
	  >div {
		  display:table;
		  width:100%;

		  position:relative;
		  height: @device-header-height;
		  span.p_title {
			  font-weight: 500;
			  cursor: move;
		  }
		  span, button {
			  display: table-cell;
			  height: @device-header-height;
			  min-width: @device-header-height;
			  vertical-align: middle;
		  }
		  button {	// node box button
			  height: @device-header-height;
			  width: @device-header-height ! important;
			  padding: 0;
			  margin: 0;
			  border: 0;
			  position:relative;
			  &.plugin-toggle svg {
				  width: 16px;
				  height: 16px;
				  fill: @device-def-color;
				  position: absolute;
				  display: block;
				  left: 50%;
				  top: 50%;
				  margin: -8px 0 0 -8px;
			  }
		  }
		  button {
			background: none;
		  }
		  button.plugin-toggle {
			  background-color: rgba(0,0,0,0.3);
		  }
		  span {
			  margin: 0px;
			  padding: 0 20px 0 10px;
			  line-height: @vp-node-text-size;
			  font-size: @vp-node-text-size;
			  height: @device-header-height;
		  }
	  }
	  .p_ins, .p_outs {	// in header
		display:table-cell;
	  }
	}
	.p_slot {			// in header
	  span.status {
			display:table-cell;
			padding:0;
			width:32px;
			min-width:32px;
			height: 27px;
			vertical-align: middle;
			position:relative;
			>svg {
			  width: 8px; height: 8px;
			  position:absolute;
			  top: 50%;
			  left: 50%;
			  margin: -4px 0 0 -4px;
			  pointer-events: none;
			}
			>svg.p_on {visibility: hidden;}
		}
	  &.p_connected {
		color: @vp-node-slot-text-color-connected;
		span.status>svg.p_on {visibility: visible;}
		span.status>svg.p_off {visibility: hidden;}
	  }
	  &.p_connecting {
		color: @vp-node-slot-text-color-connecting;
		span.status>svg.p_on {visibility: visible;}
		span.status>svg.p_off {visibility: hidden;}
	  }
	}
  	.p_content {
	  	background: @vp-node-content-bg;
	  	display: table;
	  	width:100%;
	  	height:100%;	// required for ins and outs to achieve 100% height



	  	>.p_plugin, >.p_ins, >.p_outs {
		  position: relative;
		  display:table-cell;
		  height: 100%;
		}
	  	>.p_ins {
		  >.p_in {
		  }
		}
	  	>.p_outs {
		  text-align: right;
		  >.p_out {
		  }
		}
	  	>.p_plugin {
		  width:100%;
		  vertical-align: middle;
		  vertical-position: 5%;
		  button {	// node plugin content button
			background: @vp-node-button-background;
			border: none;
			border-radius: @vp-node-button-border-radius;
			font-size: @vp-node-button-text-size;
			font-weight: 600;
			color: @vp-node-button-color;
			padding: @vp-node-button-padding;
			margin: @vp-node-button-margin;
			&:hover {
			  text-shadow: 0px 0px 15px rgba(255,255,255,0.9);
			}
			&.state_on {
			  background: rgba(255,255,255,0.4);
			  color: #fff;
			}
			&.state_off {
			  background: rgba(0,0,0,0.4);
			  color: #ccc;
			}
			&.fxtrigger {
			  -webkit-transition: background 0.4s linear;
			  -moz-transition: background 0.4s linear;
			  transition: background 0.4s linear;
			}
			&.fxtrigger:active {
			  -webkit-transition: background 0s linear;
			  -moz-transition: background 0s linear;
			  transition: background 0s linear;
			  background: rgba(255,255,255,0.7);
			}
		  }
		  input, select, textarea {
			color: #fff;
			font-size: @vp-node-text-size;
			background: rgba(0,0,0,0.3);
			border: 1px solid rgba(255,255,255,0.3);
			border-radius: 2px;
			-webkit-appearance: none;
			margin: 1px ;
		  }
		  input:focus, select:focus, textarea:focus {
			outline:0;
		  }
		}
	  	.p_in, .p_out {
		  color: white;
		}
	  	.p_slot:last-of-type {
			// @todo fix plugins with unbalanced number of slots
		}
		.p_slot:only-of-type {
		  height:100%;
		}
	  	.p_slot {
			position:relative;
		  	display:table;
		  	padding:0; margin:0;
		  	min-width: 80px;
		  	height: 20px;
		  	color: @vp-node-slot-text-color-default;
		  	span.status {
			  background: rgba(0,0,0,0.15);	// inside content area
			}
		  	label {
			  font-size: @vp-node-slot-text-size;
			  font-weight: 600;
			  padding: 5px;
			  vertical-align: middle;
			  display:table-cell;
			  width:100%;
			}
		}

	  	.p_slot.p_compatible {
		  color: green;
		}
	  	.p_slot.p_incompatible {
		  color: red;
		}

	}
  	input.node-title-input {	// TODO: move Application.prototype.onNodeHeaderDblClicked event handler to UI
	  	color: #000 !important;
  		font-size: @vp-node-text-size;
	}
}

div.graph-node.p_inline {
  button.toggle {display:none;}
}

@io_hidden_width: 1px;


// .has.single selectors weigh over .has
// noodles need these to be displayed always, io or not
div.graph-node .p_ins  {width:@io_hidden_width; min-width:@io_hidden_width; }
div.graph-node .p_outs {width:@io_hidden_width; min-width:@io_hidden_width;}
/* ... */

